added more endpoints to class controller as well as new models
