# src/controllers/ClassController.ts
@@ -1,11 +1,16 @@
 import * as express from 'express';
 /////////////////////////////////////////
 import classModel from '../models/Class';
+import classLevelModel from '../models/ClassLevel'
+import classTypeModel from '../models/ClassType'
+
 /////////////////////////////////////////
 import IController from '../interfaces/IController';
 import IRequestWithUser from '../interfaces/IRequestWithUser';
 import IClass from './../interfaces/class/IClass';  
 import IUser from './../interfaces/user/IUser';
+import IClassLevel from '../interfaces/class/ILevel';
+
 /////////////////////////////////////////
 import validationMiddleware from '../middlewares/ValidationMiddleware';
 import authMiddleware from '../middlewares/auth';
@@ -13,6 +18,10 @@ import {ImgUpload} from '../middlewares/Upload';
 ////////////////////////////////////////
 import AddClassDTO from './../dto/AddClassDTO';
 import ReserveClassDTO from './../dto/ReserveClassDTO';
+import AddClassLevelDTO from '../dto/AddClassLevelDTO'
+import AddClassTypeDTO from '../dto/AddClassTypeDTO'
+
+import RateClassDTO from '../dto/RateClassDTO'
 ////////////////////////////////////////
 import Response from './../modules/Response';
 /////////////////////////////////////////
@@ -28,14 +37,27 @@ class ClassController implements IController {
     }
     private initializeRoutes() {
         this.router.get(`${this.path}/AllClasses`,authMiddleware,this.getAllClasses);
+        this.router.get(`${this.path}/ClassLevels`,authMiddleware,this.getClassLevels);
+        this.router.get(`${this.path}/ClassTypes`,authMiddleware,this.getClassTypes);
         this.router.get(`${this.path}/ReservedClasses`,authMiddleware,this.getReservedClasses);
         this.router.get(`${this.path}/FavouriteClasses`,authMiddleware,this.getFavouriteClasses);
+        //swagger
+        this.router.get(`${this.path}/AllClassesByName/:name`,authMiddleware,this.getAllClassesByName);
+        
         //////////////////////////////////////////////////////////////////////////////////
         this.router.post(`${this.path}`, ImgUpload.single('classImage'),validationMiddleware(AddClassDTO),this.addClass);
         this.router.post(`${this.path}/ReserveClass`,authMiddleware,validationMiddleware(ReserveClassDTO),this.reserveClass);
+        this.router.post(`${this.path}/AddClassLevel`,authMiddleware,validationMiddleware(AddClassLevelDTO),this.addClassLevel);
+        this.router.post(`${this.path}/AddClassType`,authMiddleware,validationMiddleware(AddClassTypeDTO),this.addClassType);
+        this.router.post(`${this.path}/CancelClassReservation`,authMiddleware,validationMiddleware(ReserveClassDTO),this.cancelClassReservation);
+        
+        //swagger
+        this.router.post(`${this.path}/RateClass/:id`,authMiddleware,validationMiddleware(RateClassDTO),this.rateClass);
+        
         //////////////////////////////////////////////////////////////////////////////////
         this.router.put(`${this.path}/Like/:id`,authMiddleware, this.like);   
         ////////////////////////////////////////////////////////////////////////////
+        //this.router.delete(`${this.path}/:id`,authMiddleware,this.deleteClass);
         this.router.get(`${this.path}/:id`,authMiddleware,this.getClass);
     }
     private getClass = async (request: IRequestWithUser, response: express.Response, next: express.NextFunction) => {
@@ -45,6 +67,58 @@ class ClassController implements IController {
        .then((classObj:IClass)=>{
         response.status(200).send(new Response(undefined,classObj).getData());
        })
+    }
+    private getClassLevels = async (request: IRequestWithUser, response: express.Response, next: express.NextFunction) => {
+        await classLevelModel
+        .find({},'-__v -createdAt -updatedAt')
+        .then((classLevels:IClassLevel[])=>{
+            response.status(200).send(new Response(undefined,classLevels).getData());        
+        })
+    }
+    private getClassTypes = async (request: IRequestWithUser, response: express.Response, next: express.NextFunction) => {
+        await classTypeModel
+        .find({},'-__v -createdAt -updatedAt')
+        .then((classLevels:IClassLevel[])=>{
+            response.status(200).send(new Response(undefined,classLevels).getData());        
+        })
+    }
+    private addClassLevel = async (request: IRequestWithUser, response: express.Response, next: express.NextFunction) => {
+        const level:AddClassLevelDTO = request.body;
+        await classLevelModel
+        .create(level)
+        .then((level:IClassLevel)=>{
+            response.status(201).send(new Response("Class Level Created Successfully",undefined).getData());     
+        })
+        .catch(err=>{
+            next(new SomethingWentWrongException(err));
+        })
+    }
+    private addClassType = async (request: IRequestWithUser, response: express.Response, next: express.NextFunction) => {
+        const type:AddClassTypeDTO = request.body;
+        await classTypeModel
+        .create(type)
+        .then((level:IClassLevel)=>{
+            response.status(201).send(new Response("Class Type Created Successfully",undefined).getData());     
+        })
+        .catch(err=>{
+            next(new SomethingWentWrongException(err));
+        })
+    }
+    private getAllClassesByName = async (request: IRequestWithUser, response: express.Response, next: express.NextFunction) => {
+        const name = request.params.name;
+        if(name){
+            await classModel
+            .find({name},'-__v -createdAt -updatedAt')
+            .then((classObj:IClass[])=>{
+             response.status(200).send(new Response(undefined,classObj).getData());
+            })
+            .catch(err=>{
+             next(new SomethingWentWrongException(err)); 
+            })
+        }
+        else{
+            next(new SomethingWentWrongException("No Name Was Provided")); 
+        }
     }
     private getClassesWithID = async (idArray:string[]) :Promise<IClass[]> => {
         return new Promise (async (resolve,reject)=>{
@@ -85,8 +159,40 @@ class ClassController implements IController {
             if(obj){
                 request.user.reservedClasses.push(body.id);
                 await request.user.save()
+                .then(async ()=>{
+                    obj.users.push(request.user._id)
+                    await obj.save().then(()=>{
+                        response.status(200).send(new Response("Reserved Class Sucessfully",undefined).getData());
+                    })
+                    .catch(err=>{
+                        next(new SomethingWentWrongException(err));        
+                    })     
+                })
+                .catch(err=>{
+                    next(new SomethingWentWrongException(err));        
+                })
+            }
+            else{
+                next(new SomethingWentWrongException(`Class with id ${body.id} dosent exist !`));        
+            }
+        })
+        .catch(err=>{
+            next(new SomethingWentWrongException(err));        
+        })
+    }
+    private cancelClassReservation = async (request: IRequestWithUser, response: express.Response, next: express.NextFunction) => {
+        const body:ReserveClassDTO = request.body;
+        //check if class really exists
+        await classModel
+        .findById(body.id)
+        .then(async (obj:IClass)=>{
+            //class exists , assign to user
+            if(obj){
+                const index = request.user.reservedClasses.indexOf(obj._id);
+                request.user.reservedClasses.splice(index,1);
+                await request.user.save()
                 .then(()=>{
-                    response.status(200).send(new Response("Reserved Class Sucessfully",undefined).getData());
+                    response.status(200).send(new Response("Removed Class Reservation Sucessfully",undefined).getData());
                 })
                 .catch(err=>{
                     next(new SomethingWentWrongException(err));        
@@ -184,6 +290,19 @@ class ClassController implements IController {
             next(new SomethingWentWrongException(errmsg))
             })
         }
-  }
+    }
+    private rateClass = async (request: IRequestWithUser, response: express.Response, next: express.NextFunction) => {
+        const rating:RateClassDTO = request.body;
+        const _id =  request.params.id;
+        await classModel
+       .findById(_id,'-__v -createdAt -updatedAt')
+       .then((classObj:IClass)=>{
+        classObj.ratings.push(rating);
+        //calculate total rating with omar
+        classObj.save().then(()=>{
+            response.status(201).send(new Response('Rated Class Succesfully', undefined).getData());
+        })
+       })
+    }
 }
 export default ClassController;
